--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Render site
         run: quarto render
 
+      - name: Prepare publish directory
+        run: |
+          # Preserve custom domain configuration and disable Jekyll processing
+          cp CNAME _site/CNAME 2>/dev/null || true
+          touch _site/.nojekyll
+
       - name: Deploy to gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
