update calenderly link

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
 assets
+thumbnail_gen
+
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
