--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,9 @@ format:
     theme:
       - cosmo
       - brand
-    css: styles.css
+    css:
+      - styles.css
+      - styles/site-background.css
     include-in-header:
       - includes/gtm-head.html
       - includes/calendly-head.html
